<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/CaMulta"
        android:icon="@mipmap/cadrastrar"
        android:title="@string/cadastrar" />
    <item
        android:id="@+id/CoMulta"
        android:icon="@mipmap/consultar"
        android:title="@string/consultar" />

    <item
        android:id="@+id/CoArtigo"
        android:icon="@mipmap/verartigo"
        android:title="@string/verArtigo" />

    <item
        android:id="@+id/Grelatorio"
        android:enabled="false"
        android:icon="@mipmap/relatorio"
        android:title="@string/gerarRe" />



</menu>
